--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/styleguide-react-components": "^1.0.3",
     "@material-ui/core": "^1.1.0",
     "@material-ui/icons": "^1.1.0",
-    "react": "^16.4.0",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.30.10",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4",
-    "typeface-roboto": "0.0.54"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
