--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@auth0/styleguide-react-components": "^1.0.3",
     "@material-ui/core": "^1.1.0",
     "auth0-js": "^9.6.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
