--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@material-ui/core": "^1.1.0",
     "auth0-js": "^9.6.0",
     "auth0-lock": "^11.7.1",
+    "axios": "^0.18.0",
+    "dotenv": "^6.0.0",
     "highlightjs": "^9.10.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.4.0",
